--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,6 +65,12 @@ jobs:
           command: |
             cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
             jq . ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json || echo "Invalid JSON"
+      - run:
+          name: Final check credentials file
+          command: |
+            ls -l ${HOME}/project/pulumi-project/
+            cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
+            jq . ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json || echo "Invalid JSON"
       - pulumi/update:
           stack: k8s
           working_directory: ${HOME}/project/pulumi-project/
