--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,15 @@ jobs:
           command: |
             echo "export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json" >> $BASH_ENV
             source $BASH_ENV
+      - run:
+          name: Debug - Show service account email
+          command: |
+            cat $GOOGLE_APPLICATION_CREDENTIALS | grep client_email
+      - run:
+          name: Show active service account
+          command: |
+            gcloud auth list
+            cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json | jq .client_email
       - pulumi/update:
           stack: k8s
           working_directory: ${HOME}/project/pulumi-project/
