--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,9 +84,14 @@ jobs:
           command: |
             gcloud auth list
             cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json | jq .client_email
-      - pulumi/update:
-          stack: k8s
-          working_directory: ${HOME}/project/pulumi-project/
+      - run:
+          name: Pulumi up
+          command: |
+            export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
+            pulumi up --yes
+      # - pulumi/update:
+      #     stack: k8s
+      #     working_directory: ${HOME}/project/pulumi-project/
 workflows:
   build_test_deploy:
     jobs:
