--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,10 @@ jobs:
             gcloud auth list
             cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json | jq .client_email
       - run:
+          name: Set gcloud Project
+          command: |
+            gcloud config set project cicd-workshops-460410
+      - run:
           name: Test cluster creation with gcloud
           command: |
             gcloud container clusters create test-ci-cluster --zone=us-east1-b --disk-type=pd-standard --quiet || true
