--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,12 @@ jobs:
             echo "export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json" >> $BASH_ENV
             source $BASH_ENV
       - run:
+          name: Check service account roles
+          command: |
+            gcloud projects get-iam-policy cicd-workshops-460410 \
+              --filter="bindings.members:pulumi-sa@cicd-workshops-460410.iam.gserviceaccount.com" \
+              --format="table(bindings.role)"
+      - run:
           name: Debug - Show service account email
           command: |
             cat $GOOGLE_APPLICATION_CREDENTIALS | grep client_email
