--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - pulumi/login:
           access-token: ${PULUMI_ACCESS_TOKEN}
       - run:
-          name: Install dependecies.
+          name: Install dependecies
           command: |
             cd ~/
             pip install --upgrade pip
