--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,60 +61,19 @@ jobs:
             source $BASH_ENV
             gcloud auth activate-service-account --key-file ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
       - run:
-          name: Debug credentials file
-          command: |
-            cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
-      - run:
-          name: Final check credentials file
-          command: |
-            ls -l ${HOME}/project/pulumi-project/
-            cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
-            jq . ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json || echo "Invalid JSON"
-      - run:
           name: Set GOOGLE_APPLICATION_CREDENTIALS
           command: |
             echo "export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json" >> $BASH_ENV
             source $BASH_ENV
       - run:
-          name: Check service account roles
-          command: |
-            gcloud projects get-iam-policy cicd-workshops-460410 \
-              --filter="bindings.members:pulumi-sa@cicd-workshops-460410.iam.gserviceaccount.com" \
-              --format="table(bindings.role)"
-      - run:
-          name: Debug - Show service account email
-          command: |
-            cat $GOOGLE_APPLICATION_CREDENTIALS | grep client_email
-      - run:
-          name: Show active service account
-          command: |
-            gcloud auth list
-            cat ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json | jq .client_email
-      - run:
           name: Set gcloud Project
           command: |
             gcloud config set project cicd-workshops-460410
-      - run:
-          name: Check enabled services
-          command: |
-            gcloud services list --enabled --project=cicd-workshops-460410
-      - run:
-          name: Debug - Show service account email
-          command: |
-            echo "GOOGLE_APPLICATION_CREDENTIALS: $GOOGLE_APPLICATION_CREDENTIALS"
-            cat $GOOGLE_APPLICATION_CREDENTIALS | grep client_email
-      - run:
-          name: Select Pulumi stack
-          command: |
-            pulumi stack select k8s
-      - run:
-          name: Pulumi up
-          command: |
-            export GOOGLE_APPLICATION_CREDENTIALS=${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
-            pulumi up --yes
-      # - pulumi/update:
-      #     stack: k8s
-      #     working_directory: ${HOME}/project/pulumi-project/
+      - pulumi/update:
+          stack: k8s
+          working_directory: ${HOME}/project/pulumi-project/
+          env:
+            GOOGLE_APPLICATION_CREDENTIALS: ${HOME}/project/pulumi-project/cicd_demo_gcp_creds.json
 workflows:
   build_test_deploy:
     jobs:
